--- a/_data/translations.yml
+++ b/_data/translations.yml
@@ -1,19 +1,19 @@
 titolo:
-  ar: "جيكل متعدد اللغات"
-  bn: "জ্যাকিল-বহুভাষিক"
-  de: "Jekyll-mehrsprachig"
-  en: "Jekyll-Multilingual"
+  ar: "Jekyll-Plurlingva"
+  bn: "Jekyll-Plurlingva"
+  de: "Jekyll-Plurlingva"
+  en: "Jekyll-Plurlingva"
   eo: "Jekyll-Plurlingva"
-  es: "Jekyll-Multilingüe"
-  fr: "Jekyll-multilingue"
-  hi: "जेकिल-बहुभाषी"
-  it: "Jekyll-Multilingual"
-  ja: "ジキル-多言語"
-  ms: "Jekyll-Multilingual"
-  pa: "ਜੈਕੀਲ-ਬਹੁ-ਭਾਸ਼ਾਈ"
-  pt: "Jekyll-Multilingual"
-  ru: "Джекил-Многоязычный"
-  zh: "Jekyll-多语种"
+  es: "Jekyll-Plurlingva"
+  fr: "Jekyll-Plurlingva"
+  hi: "Jekyll-Plurlingva"
+  it: "Jekyll-Plurlingva"
+  ja: "Jekyll-Plurlingva"
+  ms: "Jekyll-Plurlingva"
+  pa: "Jekyll-Plurlingva"
+  pt: "Jekyll-Plurlingva"
+  ru: "Jekyll-Plurlingva"
+  zh: "Jekyll-Plurlingva"
 priskribo:
   ar: "هيكل عظمي لإنشاء موقع ويب ثابت متعدد اللغات باستخدام jekyll."
   bn: "জেকিল সহ বহুভাষিক স্থিত ওয়েবসাইট তৈরি করতে কঙ্কাল।"
@@ -21,7 +21,7 @@ priskribo:
   en: "Skeleton to create a multilingual static website with jekyll."
   eo: "Skeleto por krei plurlingvan statikan retejon kun jekyll."
   es: "Esqueleto para crear un sitio web estático multilingüe con jekyll."
-  fr: "Skeleton pour créer un site Web statique multilingue avec jekyll."
+  fr: "Squelette pour créer un site Web statique multilingue avec jekyll."
   hi: "जेकेल के साथ एक बहुभाषी स्थिर वेबसाइट बनाने के लिए कंकाल।"
   it: "Scheletro per creare un sito web statico multilingue con jekyll."
   ja: "スケルトンは、jekyllを使用して多言語の静的Webサイトを作成します。"
