--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,10 @@ ne_afisxoj: "true"
 #ne_googlesearch: "true"
 # 
 gh_uzanto: "jmichault"
+# Google Analytics tag
+ga_tag: "G-LWXDPT250W"
+# Google Adsense
+ga_adsense: "ca-pub-8796238373525171"
 
 
 # Dependencies
